<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="unikura.com.unikura.LoginActivity">


    <EditText
        android:id="@+id/etuname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/back"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:text="@string/user"
        android:inputType="textPersonName"
        android:textSize="@dimen/txtfon"
        android:layout_marginBottom="49dp"
        android:layout_above="@+id/etpass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/etpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/back"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:text="@string/pass"
        android:textSize="@dimen/txtfon" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpass"
        android:layout_marginTop="@dimen/margtop"
        android:text="@string/log"
        android:textColor="@color/colorText"
        android:background="@color/colorAccent"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/txtfon"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reghere"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/txtfon"
        android:layout_below="@+id/btnlogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margtop" />


</RelativeLayout>
